--- a/binaryCSS.css
+++ b/binaryCSS.css
@@ -32,9 +32,10 @@ body section svg{
     padding: 0px;
     margin: 0px;
 }
+/*
 body p{
     margin: 10px;
     padding: 10px 10px;
     float: left;
     background-color: lightgreen;
-}
+}*/
